<resources>
    <string name="app_name">Middle</string>
    <string name="jesus_ortiz">Jesus Ortiz</string>
    <string name="proveedor">Proveedor</string>
    <string name="inicio">Inicio</string>
    <string name="solicitud">Solicitud</string>
    <string name="perfil">Perfil</string>
    <string name="usuario">Usuario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="you_email_com">you@email.com</string>
    <string name="email">Email</string>
    <string name="password_hint">****************</string>
    <string name="password">password</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu Contraseña?</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">¿No tienes Cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="eres_proveedor">¿Eres Proveedor?</string>
    <string name="ingresa_aqui">Ingresa Aqui</string>
    <string name="create_una_cuenta">Create una Cuenta</string>
    <string name="crear_una_nueva_cuenta">Create una nueva cuenta</string>
    <string name="username">Username</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos</string>
    <string name="direccion">Direccion</string>
    <string name="avenida_espinar_403_mollendo">Avenida Espinar #403 Mollendo</string>
    <string name="edad">Edad</string>
    <string name="_22">22</string>
    <string name="sexo">Sexo</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="rubro">Rubro</string>
    <string name="masajes">Masajes</string>
    <string name="ofrece">Ofrece</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="reestablecer_contrase_a">Reestablecer Contraseña</string>
    <string name="ingresa_tu_email">Ingresa tu email</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="tendencias">Tendencias</string>
    <string name="servicios">Servicios</string>
    <string name="productos">Productos</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="middle">Middle</string>
    <string name="solicitar_publicacion">Solicitar Publicacion</string>
    <string name="categoria">Categoria</string>
    <string name="servicio">Servicio</string>
    <string name="producto">Producto</string>
    <string name="ofrecido_por">Ofrecido Por:</string>
    <string name="peluqueria_aqp">Peluqueria Aqp</string>
</resources>